--- a/server/package.json
+++ b/server/package.json
@@ -30,6 +30,7 @@
 		"jsonwebtoken": "^8.5.1",
 		"moment": "^2.29.1",
 		"mysql2": "^2.3.0",
+		"node-cron": "^3.0.0",
 		"puppeteer": "^10.2.0",
 		"sequelize": "^6.6.5",
 		"sequelize-cli": "^6.2.0",
