--- a/client/package.json
+++ b/client/package.json
@@ -8,6 +8,8 @@
 		"@testing-library/user-event": "^12.8.3",
 		"axios": "^0.21.4",
 		"bootstrap": "^5.1.0",
+		"joi": "^17.4.2",
+		"joi-browser": "^13.4.0",
 		"lodash": "^4.17.21",
 		"prop-types": "^15.7.2",
 		"react": "^17.0.2",
