--- a/client/package.json
+++ b/client/package.json
@@ -1,6 +1,6 @@
 {
 	"name": "news-client",
-	"version": "1.2.1",
+	"version": "1.3.1",
 	"private": true,
 	"dependencies": {
 		"@testing-library/jest-dom": "^5.14.1",
@@ -10,6 +10,7 @@
 		"bootstrap": "^5.1.0",
 		"joi": "^17.4.2",
 		"joi-browser": "^13.4.0",
+		"jwt-decode": "^3.1.2",
 		"lodash": "^4.17.21",
 		"prop-types": "^15.7.2",
 		"react": "^17.0.2",
