--- a/server/package.json
+++ b/server/package.json
@@ -1,11 +1,10 @@
 {
 	"name": "italian-papers-news-scraper",
-	"version": "2.1.2",
+	"version": "2.1.3",
 	"description": "A news scraper for some of the best italian papers. It does display the latest news from multiple sources so that the user can have different POVs in one page.",
 	"main": "server.js",
 	"scripts": {
-		"start": "set news_scraper_jwtPrivateKey=somekey && nodemon server.js",
-		"test": "jest --watchAll --verbose"
+		"start": "set news_scraper_jwtPrivateKey=somekey && nodemon server.js"
 	},
 	"keywords": [
 		"nodejs",
@@ -38,8 +37,6 @@
 		"winston": "^3.3.3"
 	},
 	"devDependencies": {
-		"jest": "^27.2.0",
-		"nodemon": "^2.0.12",
-		"supertest": "^6.1.6"
+		"nodemon": "^2.0.12"
 	}
 }
