--- a/server/package.json
+++ b/server/package.json
@@ -1,10 +1,14 @@
 {
 	"name": "italian-papers-news-scraper",
-	"version": "2.1.3",
+	"version": "2.2.3",
 	"description": "A news scraper for some of the best italian papers. It does display the latest news from multiple sources so that the user can have different POVs in one page.",
 	"main": "server.js",
 	"scripts": {
-		"start": "set news_scraper_jwtPrivateKey=somekey && nodemon server.js"
+		"start": "set news_scraper_jwtPrivateKey=somekey && node server.js",
+		"dev": "set news_scraper_jwtPrivateKey=somekey && nodemon server.js"
+	},
+	"engines": {
+		"node": "16.10.0"
 	},
 	"keywords": [
 		"nodejs",
@@ -21,10 +25,12 @@
 	"license": "ISC",
 	"dependencies": {
 		"bcrypt": "^5.0.1",
+		"compression": "^1.7.4",
 		"config": "^3.3.6",
 		"cors": "^2.8.5",
 		"express": "^4.17.1",
 		"express-async-errors": "^3.1.1",
+		"helmet": "^4.6.0",
 		"joi": "^17.4.2",
 		"jsonwebtoken": "^8.5.1",
 		"moment": "^2.29.1",
