--- a/client/package.json
+++ b/client/package.json
@@ -12,6 +12,7 @@
 		"joi-browser": "^13.4.0",
 		"jwt-decode": "^3.1.2",
 		"lodash": "^4.17.21",
+		"node-sass": "^6.0.1",
 		"prop-types": "^15.7.2",
 		"react": "^17.0.2",
 		"react-bootstrap": "^2.0.0-beta.6",
